// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-paperRoot-3 MuiTableContainer-root MuiPaper-elevation0 MuiPaper-rounded"
  >
    <table
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-6 makeStyles-tableCellRoot-9 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 50px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-7 makeStyles-typographyRoot-10 MuiTypography-body1"
            >
              ID
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-4 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-5 makeStyles-sortIconRoot-8"
                focusable="false"
                role="button"
                style="color: rgb(0, 0, 0);"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-5 makeStyles-sortIconRoot-8"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-6 makeStyles-tableCellRoot-12 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-7 makeStyles-typographyRoot-13 MuiTypography-body1"
            >
              Name
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-4 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-5 makeStyles-sortIconRoot-11"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-5 makeStyles-sortIconRoot-11"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-6 makeStyles-tableCellRoot-15 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-7 makeStyles-typographyRoot-16 MuiTypography-body1"
            >
              Field A
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-4 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-5 makeStyles-sortIconRoot-14"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-5 makeStyles-sortIconRoot-14"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-6 makeStyles-tableCellRoot-18 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-7 makeStyles-typographyRoot-19 MuiTypography-body1"
            >
              Field B
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-4 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-5 makeStyles-sortIconRoot-17"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-5 makeStyles-sortIconRoot-17"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-6 makeStyles-tableCellRoot-21 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-7 makeStyles-typographyRoot-22 MuiTypography-body1"
            >
              Field C
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-4 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-5 makeStyles-sortIconRoot-20"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-5 makeStyles-sortIconRoot-20"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            1
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 1
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A1
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B1
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C1
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            2
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 2
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A2
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B2
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C2
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            3
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 3
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A3
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B3
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C3
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            4
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 4
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A4
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B4
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C4
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            5
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 5
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A5
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B5
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-23 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C5
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTable ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-paperRoot-26 MuiTableContainer-root MuiPaper-elevation0 MuiPaper-rounded"
  >
    <table
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-29 makeStyles-tableCellRoot-32 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 50px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-30 makeStyles-typographyRoot-33 MuiTypography-body1"
            >
              ID
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-27 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-28 makeStyles-sortIconRoot-31"
                focusable="false"
                role="button"
                style="color: rgb(0, 0, 0);"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-28 makeStyles-sortIconRoot-31"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-29 makeStyles-tableCellRoot-35 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-30 makeStyles-typographyRoot-36 MuiTypography-body1"
            >
              Name
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-27 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-28 makeStyles-sortIconRoot-34"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-28 makeStyles-sortIconRoot-34"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-29 makeStyles-tableCellRoot-38 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-30 makeStyles-typographyRoot-39 MuiTypography-body1"
            >
              Field A
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-27 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-28 makeStyles-sortIconRoot-37"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-28 makeStyles-sortIconRoot-37"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-29 makeStyles-tableCellRoot-41 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-30 makeStyles-typographyRoot-42 MuiTypography-body1"
            >
              Field B
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-27 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-28 makeStyles-sortIconRoot-40"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-28 makeStyles-sortIconRoot-40"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-29 makeStyles-tableCellRoot-44 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-30 makeStyles-typographyRoot-45 MuiTypography-body1"
            >
              Field C
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-27 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-28 makeStyles-sortIconRoot-43"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-28 makeStyles-sortIconRoot-43"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            1
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 1
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A1
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B1
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C1
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            2
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 2
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A2
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B2
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C2
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            3
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 3
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A3
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B3
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C3
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            4
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 4
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A4
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B4
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C4
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            5
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 5
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A5
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B5
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-46 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C5
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTable ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-paperRoot-49 MuiTableContainer-root MuiPaper-elevation0 MuiPaper-rounded"
  >
    <table
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-52 makeStyles-tableCellRoot-55 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 50px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-53 makeStyles-typographyRoot-56 MuiTypography-body1"
            >
              ID
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-50 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-51 makeStyles-sortIconRoot-54"
                focusable="false"
                role="button"
                style="color: rgb(0, 0, 0);"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-51 makeStyles-sortIconRoot-54"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-52 makeStyles-tableCellRoot-58 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-53 makeStyles-typographyRoot-59 MuiTypography-body1"
            >
              Name
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-50 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-51 makeStyles-sortIconRoot-57"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-51 makeStyles-sortIconRoot-57"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-52 makeStyles-tableCellRoot-61 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-53 makeStyles-typographyRoot-62 MuiTypography-body1"
            >
              Field A
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-50 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-51 makeStyles-sortIconRoot-60"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-51 makeStyles-sortIconRoot-60"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-52 makeStyles-tableCellRoot-64 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-53 makeStyles-typographyRoot-65 MuiTypography-body1"
            >
              Field B
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-50 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-51 makeStyles-sortIconRoot-63"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-51 makeStyles-sortIconRoot-63"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-52 makeStyles-tableCellRoot-67 MuiTableCell-head"
            role="columnheader"
            scope="col"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root makeStyles-typographyRoot-53 makeStyles-typographyRoot-68 MuiTypography-body1"
            >
              Field C
            </p>
            <div
              class="MuiGrid-root makeStyles-sortContainerRoot-50 MuiGrid-container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-51 makeStyles-sortIconRoot-66"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-sortIconRoot-51 makeStyles-sortIconRoot-66"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            1
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 1
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A1
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B1
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C1
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            2
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 2
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A2
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B2
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C2
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            3
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 3
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A3
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B3
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C3
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            4
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 4
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A4
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B4
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C4
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 50px;"
          >
            5
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Item 5
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field A5
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field B5
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCellRoot-69 MuiTableCell-body MuiTableCell-paddingNone"
            role="cell"
            style="width: 100px;"
          >
            Field C5
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
